# js-subset-interpreter

./: README.md  autograder-interpreter.rkt  autograder.rkt  dune-project  js_impl.opam  js_interpreter.opam  justfile
lib/: ast.ml  dune  env.ml  env.mli  heap.ml  heap.mli  interpreter.ml  parser.ml  s_expr.ml  value.ml
test/: dune  test_js_impl.expected  test_js_impl.ml  test_js_interpret.expected  test_js_interpret.ml  test_js_print_ast.expected  test_js_print_ast.ml  util.ml
test/input_js/: number.js.acorn
test_scripts/: relational.js
