(lang dune 3.13)

(name js_impl)

(generate_opam_files true)

(source
 (github pixilcode/ocaml_js_impl))

(authors "Brendon Bown")

(maintainers "Maintainer Name")

(package
 (name js_impl)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune)
 (tags
  (topics "to describe" your project)))
